[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
bincode="1.2"
itertools = "0.8"
lazy_static="1.4"
num = "0.2"
permutohedron = "0.2"
regex="1.3"
reqwest = "0.9"
rust-crypto = "0.2"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
