[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.7"
bincode="1.2"
colored="2.0"
itertools = "0.10"
lazy_static="1.4"
num = "0.4"
permutohedron = "0.2"
primal-sieve = "0.3"
regex="1.3"
reqwest = { version = "0.11", features = ["blocking"] }
rust-crypto = "0.2"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
